# dto/successMessage.go
@@ -1,0 +1,6 @@
+package dto
+
+// SuccessMessage estrutura para retornar uma mensagem de sucesso.
+type SuccessMessage struct {
+    Message string `json:"message"`
+}
